@@ -94,8 +94,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2015 Michal Špaček
-     BSD 2-Clause License
+    © 2014-2015 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.03
